# kinetica

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  cmake-format.py  pyproject.toml  version.h.in
scripts/: ani_profiles.py  find_piston_velocity.py  heat_transfer_1d50l.py  main.py  plot_profile.py
src/: main.py
src/kinetica/: __init__.py  __init__.pyi  core.cc
src/kinetica/Boundaries/: boundaries.cc  boundaries.hh
src/kinetica/CellList/: cell_list.cc  cell_list.hh
src/kinetica/DSMC/: collider.cc  collider.hh  collisions.hh  mover.cc  mover.hh  utils.hh  wall.cc  wall.hh
src/kinetica/Domain/: domain.cc  domain.hh
src/kinetica/Geometry/: types.hh
src/kinetica/Particles/: particles.cc  particles.hh
src/kinetica/Properties/: flow_properties.cc  flow_properties.hh  profiles.cc  profiles.hh  stats.cc  stats.hh
src/kinetica/Random/: random.hh  xoshiro256.cc
src/kinetica/init/: generate_positions.hh  generate_velocities.hh
src/lab/: config.hh  constants.hh  core.cc
src/lab/Boundaries/: boundaries.cc  boundaries.hh
src/lab/Box/: box.hh
src/lab/CellList/: cell_list.cc  cell_list.hh
src/lab/Domain/: domain.cc  domain.hh
src/lab/Particles/: particles.cc
src/lab/Properties/: flow_properties.cc  stats.cc
src/lab/Random/: generators.hh  xoshiro256.cc  xoshiro256.hh
src/lab/init/: generate_positions.hh  generate_velocities.hh
