[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "numpy >=1.27"]
build-backend = "scikit_build_core.build"


[project]
name = "kinetica"
version = "0.1.3"
description = "DSMC Python bindings with Nanobind"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Tereshkin Vadim", email = "tereshkinvadimstl@gmail.com" },
]
classifiers = [
    "License :: MIT",
]
# Optional: runtime dependency specification
# dependencies = [ "cryptography >=41.0" ]

[project.urls]
Homepage = "https://github.com/example/example"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"